# sentiric-sip-uac-core

./: .gitignore  Cargo.toml  README.md
proto/: observer.proto
src/: engine.rs  lib.rs  rtp_engine.rs  utils.rs
src/media/: adapter.rs  hardware.rs  headless.rs  mod.rs
